--- a/startCode/config/config.json
+++ b/startCode/config/config.json
@@ -1,15 +1,15 @@
 {
   "development": {
     "username": "root",
+    "database": "nba_stats",
     "password": "RIPsonics9596",
-    "database": "exampledb",
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": "RIPsonics9596",
-    "database": "testdb",
+    "database": "nba_stats",
     "host": "localhost",
     "dialect": "mysql",
     "logging": false
