big clean-up, compare function and global objects

--- a/startCode/config/config.json
+++ b/startCode/config/config.json
@@ -2,13 +2,13 @@
   "development": {
     "username": "root",
     "database": "nba_stats",
-    "password": "RIPsonics9596",
+    "password": "TacoB3ll1?",
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "RIPsonics9596",
+    "password": "TacoB3ll1?",
     "database": "nba_stats",
     "host": "localhost",
     "dialect": "mysql",
