--- a/startCode/startCode/package.json
+++ b/startCode/startCode/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "handlebars-boilerplate",
+  "name": "node-handlebars-boilerplate",
   "version": "1.0.0",
   "description": "Project 2 Starter",
   "main": "server.js",
@@ -16,9 +16,6 @@
     "express-handlebars": "^3.1.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
-    "nba-play-by-play": "^1.0.0",
-    "nba-stats-client": "^1.0.0",
-    "nba.js": "^0.6.1",
     "sequelize": "^5.8.6"
   },
   "devDependencies": {
@@ -30,9 +27,5 @@
     "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
     "prettier": "^1.17.1"
-  },
-  "directories": {
-    "test": "test"
-  },
-  "author": ""
+  }
 }
