--- a/startCode/package.json
+++ b/startCode/package.json
@@ -11,12 +11,13 @@
   },
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.6.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.8.6"
+    "sequelize": "^5.19.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
